@startuml ERD_SMK_Dua_Mei

skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 60
skinparam entity {
  BackgroundColor #EEF4FF
  BorderColor #003580
  FontColor Black
  FontSize 11
  FontStyle bold
}
skinparam ArrowColor #003580
skinparam ArrowThickness 1.5

title \nEntity Relationship Diagram (ERD)\nSistem Pemesanan & Pengadaan Barang — SMK Dua Mei\n

' ══ ENTITIES ════════════════════════════════════════

entity "users" as users {
  * **id** : VARCHAR(36) <<PK>>
  --
  * username : VARCHAR(50) <<UNIQUE>>
  * password : VARCHAR(255)
  * nama : VARCHAR(100)
  * jabatan : VARCHAR(100)
  * unit_departemen : VARCHAR(100)
  * role : ENUM(guru, kepala_sekolah,\n         admin, admin_it)
  * created_at : DATETIME
  * updated_at : DATETIME
}

entity "pemesanan" as pemesanan {
  * **id** : VARCHAR(36) <<PK>>
  --
  * nomor_pesanan : VARCHAR(50) <<UNIQUE>>
  * tanggal_pesan : VARCHAR(20)
  * nama_pemesan : VARCHAR(100)
  * jabatan : VARCHAR(100)
  * unit_departemen : VARCHAR(100)
  * keperluan : TEXT
  * tanggal_dibutuhkan : VARCHAR(20)
  * prioritas : ENUM(rendah, sedang, tinggi)
  * status : ENUM(menunggu, disetujui,\n         ditolak, diproses,\n         selesai, revisi)
  ~ catatan_pemesan : TEXT
  ~ catatan_admin : TEXT
  * created_at : DATETIME
  * updated_at : DATETIME
  ~ user_id : VARCHAR(36) <<FK>>
}

entity "barang_items" as barang {
  * **id** : VARCHAR(36) <<PK>>
  --
  * nama_barang : VARCHAR(100)
  * jumlah : INT
  * satuan : VARCHAR(20)
  ~ keterangan : TEXT
  ~ harga_satuan : INT
  * pemesanan_id : VARCHAR(36) <<FK>>
}

entity "pengadaan" as pengadaan {
  * **id** : VARCHAR(36) <<PK>>
  --
  * nomor_pengadaan : VARCHAR(50) <<UNIQUE>>
  * tanggal_pengadaan : VARCHAR(20)
  * nama_pengaju : VARCHAR(100)
  * jabatan : VARCHAR(100)
  * unit_departemen : VARCHAR(100)
  * jenis_barang : VARCHAR(100)
  * spesifikasi : TEXT
  * jumlah : INT
  * satuan : VARCHAR(20)
  * estimasi_harga : INT
  * tujuan_pengadaan : TEXT
  * sumber_dana : VARCHAR(100)
  * prioritas : ENUM(rendah, sedang, tinggi)
  * status : ENUM(menunggu, disetujui,\n         ditolak, diproses,\n         selesai, revisi)
  ~ dokumen_pendukung : VARCHAR(255)
  ~ catatan_pengaju : TEXT
  ~ catatan_admin : TEXT
  * created_at : DATETIME
  * updated_at : DATETIME
  ~ user_id : VARCHAR(36) <<FK>>
}

entity "katalog_barang" as katalog {
  * **id** : VARCHAR(36) <<PK>>
  --
  * nama_barang : VARCHAR(100)
  * kategori : VARCHAR(50)
  * stok : INT
  * satuan : VARCHAR(20)
  * harga_satuan : INT
  * deskripsi : TEXT
  * min_stok : INT
  * gambar_emoji : VARCHAR(10)
  ~ gambar_url : VARCHAR(255)
  * created_at : DATETIME
  * updated_at : DATETIME
}

entity "notifikasi" as notif {
  * **id** : VARCHAR(36) <<PK>>
  --
  * judul : VARCHAR(100)
  * pesan : TEXT
  * tipe : ENUM(info, sukses,\n         peringatan, ditolak)
  * target_role : ENUM(pemohon, admin,\n              kepala_sekolah, semua)
  ~ nomor_referensi : VARCHAR(50)
  ~ jenis_form : ENUM(pemesanan, pengadaan)
  * sudah_dibaca : BOOLEAN
  * created_at : DATETIME
}

entity "approval_steps" as approval {
  * **id** : VARCHAR(36) <<PK>>
  --
  * nomor_referensi : VARCHAR(50)
  * jenis_form : ENUM(pemesanan, pengadaan)
  * langkah : INT
  * status : ENUM(menunggu, disetujui,\n         ditolak, revisi)
  * nama_approver : VARCHAR(100)
  * jabatan_approver : VARCHAR(100)
  ~ catatan : TEXT
  * tanggal : DATETIME
  ~ pemesanan_id : VARCHAR(36) <<FK>>
  ~ pengadaan_id : VARCHAR(36) <<FK>>
}

' ══ RELASI ══════════════════════════════════════════

users        ||--o{ pemesanan   : "mengajukan\n(user_id)"
users        ||--o{ pengadaan   : "mengajukan\n(user_id)"
pemesanan    ||--|{ barang      : "memiliki\n(pemesanan_id)"
pemesanan    ||--o{ approval    : "dicatat\n(pemesanan_id)"
pengadaan    ||--o{ approval    : "dicatat\n(pengadaan_id)"

@enduml
